iftttgateway.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: iftttgateway 
  labels:
    app: iftttgateway 
spec:
  replicas: 1
  selector:
    matchLabels:
      app: iftttgateway 
  template:
    metadata:
      labels:
        app: iftttgateway 
    spec:
      containers:
      - name: iftttgateway 
        image: lelandsindt/iftttgateway:latest 
        ports:
        - containerPort: 8000 
---
apiVersion: v1
kind: Service
metadata:
  name: iftttgateway 
spec:
  ports:
  - port: 6081
    targetPort: 8000 
  type: LoadBalancer
  selector:
    app: iftttgateway
---
apiVersion: v1
kind: Service
metadata:
  name: ifttt2
spec:
  ports:
  - port: 8000 
    targetPort: 8000
  selector:
    app: iftttgateway
