ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ifttt 
  annotations:
    kubernetes.io/ingress.class: traefik
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  tls:
    - secretName: ifttt-bender-sway-org-tls
      hosts:
        - ifttt.bender.sway.org
  rules:
  - host: ifttt.bender.sway.org
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: ifttt2 
            port:
              number: 8000
