ingressRoutes.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: webifttt
spec:
  entryPoints:
    - web
  routes:
  - match: Host(`ifttt.bender.sway.org`) && PathPrefix(`/`)
    kind: Rule
    services:
    - name: ifttt2 
      port: 8000

---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: websecureifttt
spec:
  entryPoints:
    - websecure
  routes:
  - match: Host(`ifttt.bender.sway.org`) && PathPrefix(`/`)
    kind: Rule
    services:
    - name: ifttt2 
      port: 8000
  tls:
    certResolver: myresolver
